update execution counts and outputs in NLP notebook; add dictionary crash course notebook

--- a/lecture notes/1-introductino to NLP.ipynb
+++ b/lecture notes/1-introductino to NLP.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,8 @@
       "Requirement already satisfied: joblib in c:\\users\\me\\myenv\\lib\\site-packages (from nltk) (1.4.2)\n",
       "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\me\\myenv\\lib\\site-packages (from nltk) (2024.11.6)\n",
       "Requirement already satisfied: tqdm in c:\\users\\me\\myenv\\lib\\site-packages (from nltk) (4.67.1)\n",
-      "Requirement already satisfied: colorama in c:\\users\\me\\myenv\\lib\\site-packages (from click->nltk) (0.4.6)\n"
+      "Requirement already satisfied: colorama in c:\\users\\me\\myenv\\lib\\site-packages (from click->nltk) (0.4.6)\n",
+      "['C:\\\\Users\\\\me/nltk_data', 'c:\\\\Users\\\\me\\\\myenv\\\\nltk_data', 'c:\\\\Users\\\\me\\\\myenv\\\\share\\\\nltk_data', 'c:\\\\Users\\\\me\\\\myenv\\\\lib\\\\nltk_data', 'C:\\\\Users\\\\me\\\\AppData\\\\Roaming\\\\nltk_data', 'C:\\\\nltk_data', 'D:\\\\nltk_data', 'E:\\\\nltk_data', 'C:\\\\Users\\\\me\\\\AppData\\\\Roaming\\\\nltk_data\\\\tokenizer']\n"
      ]
     },
     {
@@ -333,20 +334,7 @@
      "text": [
       "\n",
       "[notice] A new release of pip is available: 24.3.1 -> 25.0.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['C:\\\\Users\\\\me/nltk_data', 'c:\\\\Users\\\\me\\\\myenv\\\\nltk_data', 'c:\\\\Users\\\\me\\\\myenv\\\\share\\\\nltk_data', 'c:\\\\Users\\\\me\\\\myenv\\\\lib\\\\nltk_data', 'C:\\\\Users\\\\me\\\\AppData\\\\Roaming\\\\nltk_data', 'C:\\\\nltk_data', 'D:\\\\nltk_data', 'E:\\\\nltk_data']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n",
       "[nltk_data] Downloading package punkt to\n",
       "[nltk_data]     C:\\Users\\me\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n"
@@ -384,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +380,7 @@
      "output_type": "stream",
      "text": [
       "['Large', 'language', 'models', 'are', 'revolutionizing', 'business', 'applications.']\n",
-      "['Large', 'language', 'models', 'are', 'revolutionizing', 'business', 'applications.']\n"
+      "['Large', 'language', 'models', 'are', 'revolutionizing', 'business', 'applications', '.']\n"
      ]
     }
    ],
@@ -423,15 +411,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['large', 'language', 'models', 'are', 'revolutionizing', 'business', 'applications.']\n",
-      "['large', 'language', 'models', 'are', 'revolutionizing', 'business', 'applications']\n"
+      "['large', 'language', 'models', 'are', 'revolutionizing', 'business', 'applications', '.']\n",
+      "['large', 'language', 'models', 'are', 'revolutionizing', 'business', 'applications', '']\n"
      ]
     }
    ],
@@ -459,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -500,14 +488,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['larg', 'languag', 'model', 'revolution', 'busi', 'applic']\n"
+      "['larg', 'languag', 'model', 'revolution', 'busi', 'applic']\n",
+      "['large', 'language', 'model', 'revolutionizing', 'business', 'application']\n"
      ]
     },
     {
@@ -517,13 +506,6 @@
       "[nltk_data] Downloading package wordnet to\n",
       "[nltk_data]     C:\\Users\\me\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['large', 'language', 'model', 'revolutionizing', 'business', 'application']\n"
      ]
     }
    ],
@@ -564,9 +546,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ai' 'applications' 'benefit' 'business' 'data' 'from' 'language' 'large'\n",
+      " 'learn' 'models' 'revolutionize' 'text']\n",
+      "[[0 0 0 1 0 0 1 1 0 1 1 0]\n",
+      " [1 1 1 1 0 1 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 1 1 0 1 1 0 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
@@ -600,9 +594,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ai' 'applications' 'benefit' 'business' 'data' 'from' 'language' 'large'\n",
+      " 'learn' 'models' 'revolutionize' 'text']\n",
+      "[[0.         0.         0.         0.3935112  0.         0.\n",
+      "  0.3935112  0.51741994 0.         0.3935112  0.51741994 0.        ]\n",
+      " [0.49047908 0.49047908 0.49047908 0.37302199 0.         0.37302199\n",
+      "  0.         0.         0.         0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.45954803 0.34949812\n",
+      "  0.34949812 0.         0.45954803 0.34949812 0.         0.45954803]]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
@@ -644,7 +653,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object ngrams at 0x0000020CB6189C40>\n",
+      "[('large', 'language', 'models'), ('language', 'models', 'are'), ('models', 'are', 'transforming'), ('are', 'transforming', 'how'), ('transforming', 'how', 'businesses'), ('how', 'businesses', 'operate')]\n"
+     ]
+    }
+   ],
    "source": [
     "from nltk.util import ngrams\n",
     "\n",
@@ -671,9 +689,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "language models for customer service , content creation , and data analysis . language models for customer service , content creation ,\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "from collections import defaultdict\n",
@@ -758,9 +784,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(models|language) = 0.1081\n"
+     ]
+    }
+   ],
    "source": [
     "def build_bigram_model_with_smoothing(text):\n",
     "    \"\"\"Build a bigram model with Laplace smoothing.\"\"\"\n",
@@ -820,9 +854,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perplexity: 28.45\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
